--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -1,4 +1,5 @@
 {
-    "Неправильный ИИН или пароль": "ЖСН немесе құпия сөз дұрыс емес"
+    "Неправильный ИИН или пароль": "ЖСН немесе құпия сөз дұрыс емес",
+    "Школа не найдена": "Мектеп табылмады"
 
 }
