--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -1,5 +1,7 @@
 {
     "Неправильный ИИН или пароль": "ЖСН немесе құпия сөз дұрыс емес",
-    "Школа не найдена": "Мектеп табылмады"
-
+    "Школа не найдена": "Мектеп табылмады",
+    "Казахский": "Қазақша",
+    "Русский": "Орысша",
+    "Класс": "Сынып"
 }
