--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -3,5 +3,14 @@
     "Школа не найдена": "Мектеп табылмады",
     "Казахский": "Қазақша",
     "Русский": "Орысша",
-    "Класс": "Сынып"
+    "Класс": "Сынып",
+    "Не задано": "Берілмеген",
+    "ч.": "с.",
+    "Понедельник":  "Дүйсенбі",
+    "Вторник": "Сейсенбі",
+    "Среда": "Сәрсенбі",
+    "Четверг": "Бейсенбі",
+    "Пятница": "Жұма",
+    "Суббота": "Сенбі",
+    "Воскресенье": "Жексенбі"
 }
