--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -6,11 +6,24 @@
     "Класс": "Сынып",
     "Не задано": "Берілмеген",
     "ч.": "с.",
-    "Понедельник":  "Дүйсенбі",
-    "Вторник": "Сейсенбі",
-    "Среда": "Сәрсенбі",
-    "Четверг": "Бейсенбі",
-    "Пятница": "Жұма",
-    "Суббота": "Сенбі",
-    "Воскресенье": "Жексенбі"
+    "d_1":  "Дүйсенбі",
+    "d_2": "Сейсенбі",
+    "d_3": "Сәрсенбі",
+    "d_4": "Бейсенбі",
+    "d_5": "Жұма",
+    "d_6": "Сенбі",
+    "d_0": "Жексенбі",
+
+    "m_01": "Қаңтар",
+    "m_02": "Ақпан",
+    "m_03": "Наурыз",
+    "m_04": "Сәуір",
+    "m_05": "Мамыр",
+    "m_06": "Маусым",
+    "m_07": "Шілде",
+    "m_08": "Тамыз",
+    "m_09": "Қыркүйек",
+    "m_10": "Қазан",
+    "m_11": "Қараша",
+    "m_12": "Желтоқсан"
 }
