--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -6,6 +6,8 @@
     "Класс": "Сынып",
     "Не задано": "Берілмеген",
     "ч.": "с.",
+    "Пройдено": "Өтілді",
+
     "d_1":  "Дүйсенбі",
     "d_2": "Сейсенбі",
     "d_3": "Сәрсенбі",
