--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -27,5 +27,10 @@
     "m_09": "Қыркүйек",
     "m_10": "Қазан",
     "m_11": "Қараша",
-    "m_12": "Желтоқсан"
+    "m_12": "Желтоқсан",
+
+    "q_1": "I тоқсан",
+    "q_2": "II тоқсан",
+    "q_3": "III тоқсан",
+    "q_4": "IV тоқсан"
 }
