--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -18,5 +18,10 @@
     "m_09": "сентября",
     "m_10": "октября",
     "m_11": "ноября",
-    "m_12": "декабря"
+    "m_12": "декабря",
+
+    "q_1": "I четверть",
+    "q_2": "II четверть",
+    "q_3": "III четверть",
+    "q_4": "IV четверть"
 }
