--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -7,6 +7,8 @@
     "Не задано": "Берілмеген",
     "ч.": "с.",
     "Пройдено": "Өтілді",
+    "Тема не найдена": "Тақырып табылмады",
+    "Не удалось выставить оценку": "Баға қою мүмкін емес",
 
     "d_1":  "Дүйсенбі",
     "d_2": "Сейсенбі",
