--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -9,6 +9,7 @@
     "Пройдено": "Өтілді",
     "Тема не найдена": "Тақырып табылмады",
     "Не удалось выставить оценку": "Баға қою мүмкін емес",
+    "Никогда": "Ешқашан",
 
     "d_1":  "Дүйсенбі",
     "d_2": "Сейсенбі",
