--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -10,6 +10,12 @@
     "Тема не найдена": "Тақырып табылмады",
     "Не удалось выставить оценку": "Баға қою мүмкін емес",
     "Никогда": "Ешқашан",
+    "Некорректный ИИН": "ЖСН дұрыс емес",
+    "Данные обнаружены, но эл.почта не указана. Чтобы указать эл.почту обращайтесь к администратору школы": "Деректер табылды, бірақ эл.пошта көрсетілмеген. Электрондық поштаны көрсету үшін мектеп әкімшісіне хабарласыңыз",
+    "В базе отсутствуют указанные данные": "көрсетілген мәліметтер жүйеден табылмады",
+    "На вашу почту отправлено сведение о восстановлении доступа, пожалуйста, проверьте указанную почту (обратите внимание, в некоторых случаях письмо может оказаться в Спам-папке). В целях безопасности, повторный запрос на эту почту вы можете сделать через 30 мин.": "Поштаңызға кіруді қалпына келтіру туралы мәлімет жіберілді, көрсетілген поштаны тексеріңіз (назар аударыңыз, кейбір жағдайларда хат Спам бумасында болуы мүмкін). Қауіпсіздік мақсатында 30 минуттан кейін осы поштаға қайта сұрау салуға болады.",
+    "Запрашиваемые данные найдены. Отправить напоминание пароля на вашу почту?": "Сұралған деректер табылды. Поштаңызға құпия сөзді жіберу керек пе?",
+    "Данные обнаружены, но указанная вами почта - другая. Восстановление прервано! Напоминаем, что при регистрации использован электронный адрес:": "Деректер табылды, бірақ сіз көрсеткен пошта басқаша.  Еске саламыз, тіркеу кезінде көрсетілген пошта:",
 
     "d_1":  "Дүйсенбі",
     "d_2": "Сейсенбі",
