--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -10,6 +10,7 @@
     "Тема не найдена": "Тақырып табылмады",
     "Не удалось выставить оценку": "Баға қою мүмкін емес",
     "Никогда": "Ешқашан",
+    "СОр, СОч за этот четверть не настроено": "БЖб, ТЖб бапталмаған",
     "Некорректный ИИН": "ЖСН дұрыс емес",
     "Данные обнаружены, но эл.почта не указана. Чтобы указать эл.почту обращайтесь к администратору школы": "Деректер табылды, бірақ эл.пошта көрсетілмеген. Электрондық поштаны көрсету үшін мектеп әкімшісіне хабарласыңыз",
     "В базе отсутствуют указанные данные": "көрсетілген мәліметтер жүйеден табылмады",
